--- a/style.css
+++ b/style.css
@@ -1,376 +1,416 @@
-
-
-.about,.skills,
-.education,.languages,
-.contact,.experience{
-    padding: 40px;
-    min-height: 330px;
-    background-color: #24292d;
+.about,
+.skills,
+.education,
+.languages,
+.contact,
+.experience {
+  padding: 40px;
+  min-height: 330px;
+  background-color: #24292d;
 }
 
-.education, .language,
-.contact, .experience{
-    margin-top: 30px;
-}
-
-
-
-header{
-    text-align: center;
-    
-    overflow: hidden;
-    position: relative;
-    padding-top: 160px;
-    padding-bottom: 140px;
-}
-
-header img{
-    display: inline-block !important;
-    border: 3px solid #2f363e;
-    padding: 5px;
-}
-
-
-header h2{
-    padding-top: 40px;
-}
-
-
-.about{
-    background: white;
-}
-
-
-.skills{
-    background: #3366cc;
-    color: #f5f5f5;
-}
-
-
-.skills .progress{
-    border-radius: 0px;
-    height: 4px;
-}
-
-
-.skills .progress .progress-bar-primary{
-    background: #204090;
-}
-
-
-.skills strong{
-    display: inline-block;
-    font-weight: normal;
-    padding-bottom: 6px;
-}
-
-.education{
-    background: #3366cc;
-    color: #f5f5f5;
-}
-
-
-
-.education .education-content{
-    padding-bottom: 14px;
-}
-
-
-.education h5{
-    display: inline-block;
-}
-
-.education span{
-    margin-right: 10px;
-    padding-left: 20px;
-}
-
-
-.languages{
-    background: #2f363e;
-    margin-top: 27px;
-}
-
-
-.languages ul{
-    padding: 10px;
-}
-
-
-.languages ul li{
-    padding-bottom: 6px;
-}
-
-
-.contact{
-    background: #2f363e;
-    
-}
-
-
-.experience{
-    background: #3366cc;
-    color: #f5f5f5;
-}
-
-
-.experience-content{
-    padding-bottom: 14px;
-}
-
-
-.experience h5{
-    display: inline-block;
-}
-
-
-
-
-.experience span{
-    padding-right: 10px;
-    padding-left: 20px;
-}
-
-html, body {
-margin:0;border:0;padding:0;
-font-size:16px;
-font-family: 'Poppins', sans-serif;
-position: relative;
-vertical-align: baseline;
-background-color: #2f363e !important;
-}
-
-
-h1 {font-size:40px;}
-h2 {font-size:36px;}
-h3 {font-size:30px;}
-h4 {font-size:24px;}
-h5 {font-size:20px;}
-h6 {font-size:18px;}
-
-h2 {
-padding-bottom: 14px;
-}
-
-
-
-
-
-
-
-.white {
-color: #fff;
-}
-
-.about,.skills,
-.education,.languages,
-.contact, .experience {
-padding: 40px;
-min-height: 330px;
-}
-
-.education, .languages,
-.contact, .experience {
-margin-top: 30px;
+.education,
+.language,
+.contact,
+.experience {
+  margin-top: 30px;
 }
 
 header {
-text-align: center;
-min-height: 100vh;
-overflow: hidden;
-position: relative;
-padding-top: 160px;
-padding-bottom: 140px;
-background-color: #24292d;
+  text-align: center;
+
+  overflow: hidden;
+  position: relative;
+  padding-top: 160px;
+  padding-bottom: 140px;
+}
+
+header img {
+  display: inline-block !important;
+  border: 3px solid #2f363e;
+  padding: 5px;
+}
+
+header h2 {
+  padding-top: 40px;
+}
+
+.about {
+  background: white;
+}
+
+.skills {
+  background: #3366cc;
+  color: #f5f5f5;
+}
+
+.skills .progress {
+  border-radius: 0px;
+  height: 4px;
+}
+
+.skills .progress .progress-bar-primary {
+  background: #204090;
+}
+
+.skills strong {
+  display: inline-block;
+  font-weight: normal;
+  padding-bottom: 6px;
+}
+
+.education {
+  background: #3366cc;
+  color: #f5f5f5;
+}
+
+.education .education-content {
+  padding-bottom: 14px;
+}
+
+.education h5 {
+  display: inline-block;
+}
+
+.education span {
+  margin-right: 10px;
+  padding-left: 20px;
+}
+
+.languages {
+  background: #2f363e;
+  margin-top: 27px;
+}
+
+.languages ul {
+  padding: 10px;
+}
+
+.languages ul li {
+  padding-bottom: 6px;
+}
+
+.contact {
+  background: #2f363e;
+}
+
+.experience {
+  background: #3366cc;
+  color: #f5f5f5;
+}
+
+.experience-content {
+  padding-bottom: 14px;
+}
+
+.experience h5 {
+  display: inline-block;
+}
+
+.experience span {
+  padding-right: 10px;
+  padding-left: 20px;
+}
+
+html,
+body {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  vertical-align: baseline;
+  background-color: #2f363e !important;
+}
+
+h1 {
+  font-size: 40px;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 30px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 18px;
+}
+
+h2 {
+  padding-bottom: 14px;
+}
+
+.white {
+  color: #fff;
+}
+
+.about,
+.skills,
+.education,
+.languages,
+.contact,
+.experience {
+  padding: 40px;
+  min-height: 330px;
+}
+
+.education,
+.languages,
+.contact,
+.experience {
+  margin-top: 30px;
+}
+
+header {
+  text-align: center;
+  min-height: 100vh;
+  overflow: hidden;
+  position: relative;
+  padding-top: 160px;
+  padding-bottom: 140px;
+  background-color: #24292d;
 }
 header img {
-display: inline-block !important;
-border: 3px solid white;
-padding: 5px;
+  display: inline-block !important;
+  border: 3px solid white;
+  padding: 5px;
 }
 header h2 {
-padding-top: 40px;
+  padding-top: 40px;
 }
-.for, img{
-transition: transform .2s
+.for,
+img {
+  transition: transform 0.2s;
 }
-.for ,img:hover{
-transform: scale(1.03);
+.for,
+img:hover {
+  transform: scale(1.03);
+}
 
-}
-
-     
-     
-     
-     
-     
 /* about section */
 .about {
-background: #fff;
-box-shadow: 0px 1px 5px rgba(50,50,50,0.08);
+  background: #fff;
+  box-shadow: 0px 1px 5px rgba(50, 50, 50, 0.08);
 }
-.bottom{
-background-color: #24292d;
-}    
-     
-     
-     
+.bottom {
+  background-color: #24292d;
+}
 
 /* skills section */
 .skills {
-background: #2f363e;
-color: #f5f5f5;
+  background: #2f363e;
+  color: #f5f5f5;
 }
 .skills .progress {
-border-radius: 0px;
-height: 4px;
+  border-radius: 0px;
+  height: 4px;
 }
 .skills .progress .progress-bar-primary {
-background: #204090;
+  background: #204090;
 }
 .skills strong {
-display: inline-block;
-font-weight: normal;
-padding-bottom: 6px;
+  display: inline-block;
+  font-weight: normal;
+  padding-bottom: 6px;
 }
-     
-     
-     
 
 /* education section */
 .education {
-background: #2f363e;
-color: #f5f5f5;
+  background: #2f363e;
+  color: #f5f5f5;
 }
 .education .education-content {
-padding-bottom: 14px;
+  padding-bottom: 14px;
 }
 .education h5 {
-display: inline-block;
+  display: inline-block;
 }
 .education span {
-padding-right: 10px;
-padding-left: 20px;
+  padding-right: 10px;
+  padding-left: 20px;
 }
 
-     
-     
 /* languages section */
 .languages {
-background: #fff; 
+  background: #fff;
 }
 .languages ul {
-padding: 10px;
+  padding: 10px;
 }
 .languages ul li {
-padding-bottom: 6px;
+  padding-bottom: 6px;
 }
 
-     
-     
-     
 /* contact section */
 .contact {
-background: #fff;  
+  background: #fff;
 }
 .contact .fa {
-padding-right: 6px;
+  padding-right: 6px;
 }
 
-     
-     
-     
-     
 /* experience section */
 .experience {
-background: #2f363e;
-color: #f5f5f5;
+  background: #2f363e;
+  color: #f5f5f5;
 }
 .experience-content {
-padding-bottom: 14px;
+  padding-bottom: 14px;
 }
 .experience h5 {
-display: inline-block;
+  display: inline-block;
 }
 .experience span {
-padding-right: 10px;
-padding-left: 20px;
+  padding-right: 10px;
+  padding-left: 20px;
 }
 
-     
-     
-     
-     
-     
-     
 /* footer section */
 footer {
-color: #f9f9f9;
-text-align: center;
-padding-top: 140px;
-padding-bottom: 100px;
-background-color: #24292d;
+  color: #f9f9f9;
+  text-align: center;
+  padding-top: 140px;
+  padding-bottom: 100px;
+  background-color: #24292d;
 }
-     
-     
-     
 
 /* social icon section */
 .social-icons {
-padding: 0;
-margin: 0;
+  padding: 0;
+  margin: 0;
 }
 .social-icons li {
-display: inline-block;
-list-style: none;
+  display: inline-block;
+  list-style: none;
 }
 .social-icons li a {
-background: #2f363e;
-border-radius: 50%;
-color: #fff;
-text-decoration: none;
-font-size: 18px;
-width: 40px;
-height: 40px;
-line-height: 40px;
-text-align: center;
-transition: all 0.4s ease-in;
-position: relative;
-bottom: 10px;
-top: 10px;
+  background: #2f363e;
+  border-radius: 50%;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  transition: all 0.4s ease-in;
+  position: relative;
+  bottom: 10px;
+  top: 10px;
 }
 .social-icons li a:hover {
-background: #202020;
-color: #fff;
+  background: #202020;
+  color: #fff;
 }
 
-@media ( max-width: 980px ) {
-.skills {
-margin-top: 30px;
-}
-}
-
-@media ( max-width: 360px ) {
-header h1 {
-font-size: 30px;
-}
-.about h2 {
-font-size: 24px;
-}
-.education h4,
-.experience h4 {
-font-size: 20px;
-}
+@media (max-width: 980px) {
+  .skills {
+    margin-top: 30px;
+  }
 }
 
+@media (max-width: 360px) {
+  header h1 {
+    font-size: 30px;
+  }
+  .about h2 {
+    font-size: 24px;
+  }
+  .education h4,
+  .experience h4 {
+    font-size: 20px;
+  }
+}
 
+.timeline-section {
+  background-color: #24292d;
+  min-height: 100vh;
+  padding: 100px 15px;
+}
+.timeline-items {
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+}
+.timeline-items::before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  background-color: #2f363e;
+  left: calc(50% - 1px);
+}
+.timeline-item {
+  margin-bottom: 40px;
+  width: 100%;
+  position: relative;
+}
+.timeline-item:last-child {
+  margin-bottom: 0;
+}
+.timeline-item:nth-child(odd) {
+  padding-right: calc(50% + 30px);
+  text-align: right;
+}
+.timeline-item:nth-child(even) {
+  padding-left: calc(50% + 30px);
+}
+.timeline-dot {
+  height: 16px;
+  width: 16px;
+  background-color: #eaa023;
+  position: absolute;
+  left: calc(50% - 8px);
+  border-radius: 50%;
+  top: 10px;
+}
+.timeline-date {
+  font-size: 18px;
+  color: #eaa023;
+  margin: 6px 0 15px;
+}
+.timeline-content {
+  background-color: #2f363e;
+  padding: 30px;
+  border-radius: 5px;
+}
+.timeline-content h3 {
+  font-size: 20px;
+  color: #ffffff;
+  margin: 0 0 10px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+.timeline-content p {
+  color: #c8c8c8;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 22px;
+}
 
-
-
-
-
-
-
-
-
-
+/* responsive */
+@media (max-width: 767px) {
+  .timeline-items::before {
+    left: 7px;
+  }
+  .timeline-item:nth-child(odd) {
+    padding-right: 0;
+    text-align: left;
+  }
+  .timeline-item:nth-child(odd),
+  .timeline-item:nth-child(even) {
+    padding-left: 37px;
+  }
+  .timeline-dot {
+    left: 0;
+  }
+}
