--- a/style.css
+++ b/style.css
@@ -35,35 +35,6 @@ header h2 {
   padding-top: 40px;
 }
 
-.about {
-  background: white;
-}
-
-.skills {
-  background: #3366cc;
-  color: #f5f5f5;
-}
-
-.skills .progress {
-  border-radius: 0px;
-  height: 4px;
-}
-
-.skills .progress .progress-bar-primary {
-  background: #204090;
-}
-
-.skills strong {
-  display: inline-block;
-  font-weight: normal;
-  padding-bottom: 6px;
-}
-
-.education {
-  background: #3366cc;
-  color: #f5f5f5;
-}
-
 .education .education-content {
   padding-bottom: 14px;
 }
@@ -367,7 +338,7 @@ footer {
 .timeline-dot {
   height: 16px;
   width: 16px;
-  background-color: #eaa023;
+  background-color: #cfe5ff;
   position: absolute;
   left: calc(50% - 8px);
   border-radius: 50%;
@@ -375,7 +346,7 @@ footer {
 }
 .timeline-date {
   font-size: 18px;
-  color: #eaa023;
+  color: #cfe5ff;
   margin: 6px 0 15px;
 }
 .timeline-content {
